--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="header">
       <header>
         <h1>Palkotikum</h1>
-        <h2>STUDIOS</h2>
+        <h2>TECHNOLOGIES</h2>
       </header>
       <nav>
         <a href="#">Rólunk</a>
@@ -39,63 +39,108 @@
         <a href="#">Pályázatok</a>
       </nav>
     </div>
-    <!-- ICON BAR BEGIN -->
-    <div class="icon-bar">
-      <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
-      <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
-      <a href="#" class="google"><i class="fa fa-google"></i></a> 
-      <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-      <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
-    </div>
-    <!-- ICON BAR END -->
-
-    <div id="udv">
-      <img src="static/PalkotikumStudios2-square.jpg" />
-      <h1>Üdvözöl a Palkotikum Studios!</h1>
-    </div>
 
     <menu>
-      <h3 id="italapok">
-        <a href="italapok.html">Informatikai tehetséggondozó program</a>
-      </h3>
+      <h2>Elmélet</h2>
+      <section>
+        <a href="hardver/infelm.html">Információelmélet</a>
+        <a href="hardver/binary.html">Kettes számrendszer</a>
+        <a href="hardver/nummat.html">Numerikus matematika 1.</a>
+        <a href="#">Numerikus programozás</a>
+      </section>
 
-      <h3 id="halo">
-        <a href="halo.html">Hálózatok</a>
-      </h3>
+      <h2>Hardver - Központi egység</h2>
+      <section>
+        <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
+        <a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a>
+        <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
+        <a href="kozpontiegyseg/cpu.html">CPU</a>
+        <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
+        <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák</a>
+        <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet</a>
+      </section>
 
-      <h3 id="prog">
-        <a href="prog.html">Szoftverfejlesztő Stúdió</a>
-      </h3>
+      <h2>Hardver - Gépház</h2>
+      <section>
+        <a href="hardver/htmagn.html">Háttértárak</a>
+        <a href="hardver/alaplap.html">Alaplap</a>
+        <a href="hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a>
+        <a href="hardver/kabport.html">Adatkábelek és portok</a>
+        <a href="hardver/tapakku.html">Tápegység, akkumulátor</a>
+        <a href="hardver/haz.html">Ház</a>
+        <a href="hardver/pc.html">Személyi számítógép</a>
+        <a href="hardver/biosuefi.html">BIOS, UEFI</a>
+      </section>
 
-      <h3 id="filmstudio">
-        <a href="film.html">Komplex tehetséggondozó program</a>
-      </h3>
+      <h2>Hardver - Perifériák</h2>
+      <section>
+        <a href="perif/bill.html">Billentyűzet</a>
+        <a href="perif/eger.html">Egér, touchpad</a>
+        <a href="perif/printer.html">Nyomtató</a>
+        <a href="perif/monitor.html">Monitorok és projektorok</a>
+        <a href="perif/mic.html">Mikrofonok és hangszórók</a>
+        <a href="perif/fenyk.html">Fényképező & kamera</a>
+        <a href="perif/scanner.html">Scanner</a>
+        <a href="perif/digitabla.html">Digitális tábla</a>
+        <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák</a>
+        <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők</a>
+      </section>
 
-      <h3 id="techtermtud">
-        <a href="techtermtud.html">Technika és természettudomány</a>
-      </h3>
-  
-      <h3 id="torttarstud">
-        <a href="torttarstud.html">Történelem és társadalomtudomány</a>
-      </h3>
-  
-      <h3 id="irmuvtort">
-        <a href="irmuvtort.html">Irodalom és művészettörténet</a>
-      </h3>
-  
-      <h3 id="keszsegek">
-        <a href="keszsegek.html">Készségek</a>
-      </h3>
+      <h2>Operációs rendszerek</h2>
+      <section>
+        <a href="rendszer/os.html">Operációs rendszerek</a>
+        <a href="rendszer/fajl.html">Fájlok, fájlrendszerek</a>
+        <a href="rendszer/segedpr.html">Segédprogramok</a>
+        <a href="rendszer/windows.html">Windows</a>
+        <a href="rendszer/linux.html">Linux</a>
+        <a href="rendszer/android.html">Android</a>
+        <a href="rendszer/unix.html">Unix</a>
+        <a href="rendszer/virt.html">Virtuális gépek és konténerek</a>
+      </section>
+
+      <h2>Oktatási anyagok</h2>
+      <section>
+        <a href="okt/okt.html">Oktatási anyagok</a>
+        <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+      </section>
+
+      <h2>Irodai szoftverek</h2>
+      <section>
+        <a href="office/tablazat.html">Táblázatkezelés</a>
+        <a href="office/szoveg.html">Szövegszerkesztés</a>
+        <a href="office/prezi.html">Prezentációkészítés</a>
+        <a href="office/kiadvany.html">Kiadványszerkesztés</a>
+        <a href="office/texlatex.html">TeX / LaTeX</a>
+      </section>
+
+      <h2>Mikroelektronika</h2>
+      <section>
+        <a href="mikro/bevelektr.html">Bevezetés az elektronikába</a>
+        <a href="mikro/raspberry.html">Raspberry</a>
+        <a href="mikro/arduino.html">Arduino</a>
+        <a href="mikro/robotika.html">Robotika</a>
+        <a href="mikro/dron.html">Drónok</a>
+      </section>
+
+      <h2>3D nyomtatás</h2>
+      <section>
+        <a href="3dnyomt.html">3D nyomtatás</a>
+        <a href="3ddekor.html">Nemzeti lakásdekor</a>
+      </section>
+
+      <h2>Okoseszközök</h2>
+      <section>
+        <a href="okos/okostelefon.html">Okostelefonok</a>
+      </section>
+
+      <h2>Mesterséges intelligencia</h2>
+      <section>
+        <a href="mlnnai/mlnnai1.html">Mesterséges intelligencia</a>
+        <a href="mlnnai/mlnnai2.html">Gépi tanulás</a>
+        <a href="mlnnai/mlnnai3.html">Neuronhálózatok</a>
+      </section>
     </menu>
 
     <div style="clear:both;"></div>
-
-    <!-- FOOTER BEGIN -->
-    <footer>
-      <img src="static/PalkotikumStudios2-square.jpg" />
-      <p>Minden jog fenntartva!</p>
-      <div style="clear:both;"></div>
-    </footer>
-    <!-- FOOTER END -->
   </body>
 </html>
