--- a/hardver/kabport.html
+++ b/hardver/kabport.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../static/mainfilm.css">
         <link rel="stylesheet" href="../static/oldalak.css">
         
-        <title>Komplex tehetséggondozó program</title>
+        <title>Palkotikum</title>
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
         <div id="header">
           <header>
             <h1><a href="../index.html" title="Kezdőlap">Palkotikum</a></h1>
-            <h2><a href="../iras.html" title="Nyitóoldal">Kreatív írás</a></h2>
+            <h2>TECHNOLOGIES</h2>
           </header>
           <nav>
             <a href="#">Rólunk</a>
