--- a/index.html
+++ b/index.html
@@ -30,27 +30,20 @@
       <nav>
         <a href="#">Rólunk</a>
         <a href="#">Blog</a>
-        <!--<a href="#" id="podcastbutton">
-          <img src="../static/podcast-2665179_640.png" id="podcasticon" /></i>
-          <p>Podcast</p>
-        </a>-->
         <a href="#">Regisztráció</a>
         <a href="#">Bejelentkezés</a>
         <a href="#">Pályázatok</a>
       </nav>
     </div>
 
-    <menu>
+    <main>
       <h2>Elmélet</h2>
-      <section>
         <a href="hardver/infelm.html">Információelmélet</a>
         <a href="hardver/binary.html">Kettes számrendszer</a>
         <a href="hardver/nummat.html">Numerikus matematika 1.</a>
         <a href="#">Numerikus programozás</a>
-      </section>
 
       <h2>Hardver - Központi egység</h2>
-      <section>
         <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
         <a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a>
         <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
@@ -58,10 +51,8 @@
         <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
         <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák</a>
         <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet</a>
-      </section>
 
       <h2>Hardver - Gépház</h2>
-      <section>
         <a href="hardver/htmagn.html">Háttértárak</a>
         <a href="hardver/alaplap.html">Alaplap</a>
         <a href="hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a>
@@ -70,10 +61,8 @@
         <a href="hardver/haz.html">Ház</a>
         <a href="hardver/pc.html">Személyi számítógép</a>
         <a href="hardver/biosuefi.html">BIOS, UEFI</a>
-      </section>
 
       <h2>Hardver - Perifériák</h2>
-      <section>
         <a href="perif/bill.html">Billentyűzet</a>
         <a href="perif/eger.html">Egér, touchpad</a>
         <a href="perif/printer.html">Nyomtató</a>
@@ -84,10 +73,8 @@
         <a href="perif/digitabla.html">Digitális tábla</a>
         <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák</a>
         <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők</a>
-      </section>
 
       <h2>Operációs rendszerek</h2>
-      <section>
         <a href="rendszer/os.html">Operációs rendszerek</a>
         <a href="rendszer/fajl.html">Fájlok, fájlrendszerek</a>
         <a href="rendszer/segedpr.html">Segédprogramok</a>
@@ -96,51 +83,36 @@
         <a href="rendszer/android.html">Android</a>
         <a href="rendszer/unix.html">Unix</a>
         <a href="rendszer/virt.html">Virtuális gépek és konténerek</a>
-      </section>
 
       <h2>Oktatási anyagok</h2>
-      <section>
         <a href="okt/okt.html">Oktatási anyagok</a>
         <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
-      </section>
 
       <h2>Irodai szoftverek</h2>
-      <section>
         <a href="office/tablazat.html">Táblázatkezelés</a>
         <a href="office/szoveg.html">Szövegszerkesztés</a>
         <a href="office/prezi.html">Prezentációkészítés</a>
         <a href="office/kiadvany.html">Kiadványszerkesztés</a>
         <a href="office/texlatex.html">TeX / LaTeX</a>
-      </section>
 
       <h2>Mikroelektronika</h2>
-      <section>
         <a href="mikro/bevelektr.html">Bevezetés az elektronikába</a>
         <a href="mikro/raspberry.html">Raspberry</a>
         <a href="mikro/arduino.html">Arduino</a>
         <a href="mikro/robotika.html">Robotika</a>
         <a href="mikro/dron.html">Drónok</a>
-      </section>
 
       <h2>3D nyomtatás</h2>
-      <section>
         <a href="3dnyomt.html">3D nyomtatás</a>
         <a href="3ddekor.html">Nemzeti lakásdekor</a>
-      </section>
 
       <h2>Okoseszközök</h2>
-      <section>
         <a href="okos/okostelefon.html">Okostelefonok</a>
-      </section>
 
       <h2>Mesterséges intelligencia</h2>
-      <section>
         <a href="mlnnai/mlnnai1.html">Mesterséges intelligencia</a>
         <a href="mlnnai/mlnnai2.html">Gépi tanulás</a>
         <a href="mlnnai/mlnnai3.html">Neuronhálózatok</a>
-      </section>
-    </menu>
-
-    <div style="clear:both;"></div>
+    </main>
   </body>
 </html>
