--- a/index.html
+++ b/index.html
@@ -36,6 +36,37 @@
       </nav>
     </div>
 
+    <aside>
+      <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
+      <br>
+      <h2>Felölelt témakörök</h2>
+      <ol>
+        <li>Bevezetés az elektronikába (x óra)</li>
+        <li>A PC része, PC szét- és összeszerelése, bővítése (x óra)</li>
+        <li>Megelőző karbantartás és hibakeresés (x óra)</li>
+        <li>Laptopok és más eszközök tulajdonságai, hibakeresés (x óra)</li>
+        <li>Nyomtatók és egyéb perifériák</li>
+        <li>Virtualizáció és felhőtechnológiák (x óra)</li>
+        <li>Windows telepítése és konfigurációja (x óra)</li>
+        <li>A dolgok internete (x óra)</li>
+        <hr>
+        <li>Informatikai és távközlési hálózatok napjainkban (x óra)</li>
+        <li>Hálózati protokollok és modellek, végponti eszközök hálózati beállítása (x óra)</li>
+        <li>Kapcsolás Ethernet-hálózatokon, a kapcsoló alapszintű beállítása (x óra)</li>
+        <li>A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása (x óra)</li>
+        <li>A szállítási és az alkalmazási réteg (x óra)</li>
+        <li>Otthoni és kisvállalati hálózat építése és beállítása (x óra)</li>
+        <li>IT-biztonság (x óra)</li>
+        <li>Egyéb operációs rendszerek (mobil és MacOS) (x óra)</li>
+        <li>Linux alapok (x óra)</li>
+        <hr>
+        <li>Gépi tanulás, neuronhálózatok, mesterséges intelligencia (x óra)</li>
+      </ol>
+      <br>
+      <h2>Ágazati alapvizsga</h2>
+      <p>Informatikai és távközlési alapok interaktív teszt</p>
+    </aside>
+
     <main>
       <h2>Elmélet</h2>
         <a href="hardver/infelm.html">Információelmélet</a>
@@ -114,5 +145,7 @@
         <a href="mlnnai/mlnnai2.html">Gépi tanulás</a>
         <a href="mlnnai/mlnnai3.html">Neuronhálózatok</a>
     </main>
+
+    <div style="clear:both;"></div>
   </body>
 </html>
