--- a/index.html
+++ b/index.html
@@ -39,16 +39,22 @@
     <aside>
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
       <br>
-      <h2>Felölelt témakörök</h2>
+      <h2>Informatikai és távközlési alapok I.</h2>
       <ol>
         <li>Bevezetés az elektronikába (x óra)</li>
+        <hr>
         <li>A PC része, PC szét- és összeszerelése, bővítése (x óra)</li>
         <li>Megelőző karbantartás és hibakeresés (x óra)</li>
         <li>Laptopok és más eszközök tulajdonságai, hibakeresés (x óra)</li>
         <li>Nyomtatók és egyéb perifériák</li>
         <li>Virtualizáció és felhőtechnológiák (x óra)</li>
         <li>Windows telepítése és konfigurációja (x óra)</li>
+        <hr>
         <li>A dolgok internete (x óra)</li>
+      </ol>
+      <h2>Informatika és távközlési alapok II.</h2>
+      <ol>
+        <li>Gépi tanulás, neuronhálózatok, mesterséges intelligencia (x óra)</li>
         <hr>
         <li>Informatikai és távközlési hálózatok napjainkban (x óra)</li>
         <li>Hálózati protokollok és modellek, végponti eszközök hálózati beállítása (x óra)</li>
@@ -57,12 +63,10 @@
         <li>A szállítási és az alkalmazási réteg (x óra)</li>
         <li>Otthoni és kisvállalati hálózat építése és beállítása (x óra)</li>
         <li>IT-biztonság (x óra)</li>
+        <hr>
         <li>Egyéb operációs rendszerek (mobil és MacOS) (x óra)</li>
         <li>Linux alapok (x óra)</li>
-        <hr>
-        <li>Gépi tanulás, neuronhálózatok, mesterséges intelligencia (x óra)</li>
       </ol>
-      <br>
       <h2>Ágazati alapvizsga</h2>
       <p>Informatikai és távközlési alapok interaktív teszt</p>
     </aside>
