--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="hardver/infelm.html">Információelmélet</a>
         <a href="hardver/binary.html">Kettes számrendszer</a>
         <a href="hardver/nummat.html">Numerikus matematika 1.</a>
-        <a href="#">Numerikus programozás</a>
+        <a href="hardver/r.html">Numerikus programozás</a>
 
       <h2>Hardver - Központi egység</h2>
         <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
