--- a/index.html
+++ b/index.html
@@ -38,25 +38,24 @@
 
     <aside>
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
-      <h2>Informatikai és távközlési alapok I.</h2>
+      <h2>Informatikai és távközlési alapok I-II.</h2>
       <ol>
-        <li>Bevezetés az elektronikába (x óra)</li>
+        <li><a href="ptt/bevelektr.html">Bevezetés az elektronikába (x óra)</a></li>
         <hr>
-        <li>A PC része, PC szét- és összeszerelése, bővítése (x óra)</li>
-        <li>Megelőző karbantartás és hibakeresés (x óra)</li>
-        <li>Laptopok és más eszközök tulajdonságai, hibakeresés (x óra)</li>
-        <li>Nyomtatók és egyéb perifériák</li>
-        <li>Virtualizáció és felhőtechnológiák (x óra)</li>
-        <li>Windows telepítése és konfigurációja (x óra)</li>
+        <li><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (x óra)</a></li>
+        <li><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (x óra)</a></li>
+        <li><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (x óra)</a></li>
+        <li><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák</a></li>
+        <li><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (x óra)</a></li>
+        <li><a href="ptt/windows.html">Windows telepítése és konfigurációja (x óra)</a></li>
+        <li><a href="ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (x óra)</a></li>
+        <li><a href="ptt/linux.html">Linux alapok (x óra)</a></li>
+        <hr>
+        <li><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (x óra)</a></li>
       </ol>
-      <h2>Informatika és távközlési alapok II.</h2>
-      <ol>
-        <li>Gépi tanulás, neuronhálózatok, mesterséges intelligencia (x óra)</li>
-        <li>Egyéb operációs rendszerek (mobil és MacOS) (x óra)</li>
-        <li>Linux alapok (x óra)</li>
-      </ol>
+
       <h2>Ágazati alapvizsga</h2>
-      <p>Informatikai és távközlési alapok interaktív teszt</p>
+      <p><a href="kkk/ietatesztag.html">Informatikai és távközlési alapok interaktív teszt</a></p>
     </aside>
 
     <main>
