--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
       <h2>Informatikai és távközlési alapok I-II.</h2>
       <ol>
-        <li><a href="ptt/bevelektr.html">Bevezetés az elektronikába (x óra)</a></li>
+        <li><a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a></li>
         <hr>
-        <li><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (x óra)</a></li>
-        <li><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (x óra)</a></li>
-        <li><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (x óra)</a></li>
-        <li><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák</a></li>
-        <li><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (x óra)</a></li>
-        <li><a href="ptt/windows.html">Windows telepítése és konfigurációja (x óra)</a></li>
-        <li><a href="ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (x óra)</a></li>
-        <li><a href="ptt/linux.html">Linux alapok (x óra)</a></li>
+        <li><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></li>
+        <li><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></li>
+        <li><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></li>
+        <li><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></li>
+        <li><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></li>
+        <li><a href="ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></li>
+        <li><a href="ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></li>
+        <li><a href="ptt/linux.html">Linux alapok (7+11 óra)</a></li>
         <hr>
-        <li><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (x óra)</a></li>
+        <li><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></li>
       </ol>
 
       <h2>Ágazati alapvizsga</h2>
