--- a/hardver/biosuefi.html
+++ b/hardver/biosuefi.html
@@ -30,15 +30,11 @@
         <h2>TECHNOLOGIES</h2>
       </header>
       <nav>
-        <a href="#">Rólunk</a>
+        <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
-        <!--<a href="#" id="podcastbutton">
-          <img src="../static/podcast-2665179_640.png" id="podcasticon" /></i>
-          <p>Podcast</p>
-        </a>-->
-        <a href="#">Regisztráció</a>
-        <a href="#">Bejelentkezés</a>
-        <a href="#">Pályázatok</a>
+        <a href="../nav/peldak.html">Példák</a>
+        <a href="../nav/paly.html">Pályázatok</a>
+        <a href="../nav/vizsgak.html">Vizsgák</a>
       </nav>
     </div>
     
