--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <h2>TECHNOLOGIES</h2>
       </header>
       <nav>
-        <a href="#">Rólunk</a>
+        <a href="nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
-        <a href="#">Regisztráció</a>
-        <a href="#">Bejelentkezés</a>
-        <a href="#">Pályázatok</a>
+        <a href="nav/peldak.html">Példák</a>
+        <a href="nav/paly.html">Pályázatok</a>
+        <a href="nav/vizsgak.html">Vizsgák</a>
       </nav>
     </div>
 
