--- a/index.html
+++ b/index.html
@@ -36,104 +36,108 @@
       </nav>
     </div>
 
-    <aside>
+    <div id="cim">
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
-      <h2>Informatikai és távközlési alapok I-II.</h2>
-      <ol>
-        <li><a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a></li>
-
-        <li><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></li>
-        <li><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></li>
-        <li><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></li>
-        <li><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></li>
-        <li><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></li>
-        <li><a href="ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></li>
-        <li><a href="ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></li>
-        <li><a href="ptt/linux.html">Linux alapok (7+11 óra)</a></li>
-
-        <li><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></li>
-      </ol>
-    </aside>
+    </div>
 
     <main>
-      <h2>Elmélet</h2>
-        <a href="hardver/infelm.html">Információelmélet</a>
-        <a href="hardver/binary.html">Kettes számrendszer</a>
-        <a href="hardver/nummat.html">Numerikus matematika 1.</a>
-        <a href="hardver/r.html">Numerikus programozás</a>
-
-      <h2>Hardver - Központi egység</h2>
-        <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
-        <a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a>
-        <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
-        <a href="kozpontiegyseg/cpu.html">CPU</a>
-        <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
-        <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák</a>
-        <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet</a>
-
-      <h2>Hardver - Gépház</h2>
-        <a href="hardver/htmagn.html">Háttértárak</a>
-        <a href="hardver/alaplap.html">Alaplap</a>
-        <a href="hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a>
-        <a href="hardver/kabport.html">Adatkábelek és portok</a>
-        <a href="hardver/tapakku.html">Tápegység, akkumulátor</a>
-        <a href="hardver/haz.html">Ház</a>
-        <a href="hardver/pc.html">Személyi számítógép</a>
-        <a href="hardver/biosuefi.html">BIOS, UEFI</a>
-
-      <h2>Hardver - Perifériák</h2>
-        <a href="perif/bill.html">Billentyűzet</a>
-        <a href="perif/eger.html">Egér, touchpad</a>
-        <a href="perif/printer.html">Nyomtató</a>
-        <a href="perif/monitor.html">Monitorok és projektorok</a>
-        <a href="perif/mic.html">Mikrofonok és hangszórók</a>
-        <a href="perif/fenyk.html">Fényképező & kamera</a>
-        <a href="perif/scanner.html">Scanner</a>
-        <a href="perif/digitabla.html">Digitális tábla</a>
-        <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák</a>
-        <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők</a>
-
-      <h2>Operációs rendszerek</h2>
-        <a href="rendszer/os.html">Operációs rendszerek</a>
-        <a href="rendszer/fajl.html">Fájlok, fájlrendszerek</a>
-        <a href="rendszer/segedpr.html">Segédprogramok</a>
-        <a href="rendszer/windows.html">Windows</a>
-        <a href="rendszer/linux.html">Linux</a>
-        <a href="rendszer/android.html">Android</a>
-        <a href="rendszer/unix.html">Unix</a>
-        <a href="rendszer/virt.html">Virtuális gépek és konténerek</a>
-
-      <h2>Oktatási anyagok</h2>
-        <a href="okt/okt.html">Oktatási anyagok</a>
-        <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
-
-      <h2>Irodai szoftverek</h2>
-        <a href="office/tablazat.html">Táblázatkezelés</a>
-        <a href="office/szoveg.html">Szövegszerkesztés</a>
-        <a href="office/prezi.html">Prezentációkészítés</a>
-        <a href="office/kiadvany.html">Kiadványszerkesztés</a>
-        <a href="office/texlatex.html">TeX / LaTeX</a>
-
-      <h2>Mikroelektronika</h2>
-        <a href="mikro/bevelektr.html">Bevezetés az elektronikába</a>
-        <a href="mikro/raspberry.html">Raspberry</a>
-        <a href="mikro/arduino.html">Arduino</a>
-        <a href="mikro/robotika.html">Robotika</a>
-        <a href="mikro/dron.html">Drónok</a>
-
-      <h2>3D nyomtatás</h2>
-        <a href="3dnyomt.html">3D nyomtatás</a>
-        <a href="3ddekor.html">Nemzeti lakásdekor</a>
-
-      <h2>Okoseszközök</h2>
-        <a href="okos/okostelefon.html">Okostelefonok</a>
-
-      <h2>Mesterséges intelligencia</h2>
-        <a href="mlnnai/mlnnai1.html">Mesterséges intelligencia</a>
-        <a href="mlnnai/mlnnai2.html">Gépi tanulás</a>
-        <a href="mlnnai/mlnnai3.html">Neuronhálózatok</a>
+      <section>
+        <aside>
+          <h2>Informatikai és távközlési alapok I-II.</h2>
+          <ol>
+            <li><a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a></li>
+    
+            <li><a href="ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></li>
+            <li><a href="ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></li>
+            <li><a href="ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></li>
+            <li><a href="ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></li>
+            <li><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></li>
+            <li><a href="ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></li>
+            <li><a href="ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></li>
+            <li><a href="ptt/linux.html">Linux alapok (7+11 óra)</a></li>
+    
+            <li><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></li>
+          </ol>
+        </aside>
+        <article>
+          <h2>Elmélet</h2>
+          <a href="hardver/infelm.html">Információelmélet</a>
+          <a href="hardver/binary.html">Kettes számrendszer</a>
+          <a href="hardver/nummat.html">Numerikus matematika 1.</a>
+          <a href="hardver/r.html">Numerikus programozás</a>
+  
+          <h2>Hardver - Központi egység</h2>
+          <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
+          <a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a>
+          <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
+          <a href="kozpontiegyseg/cpu.html">CPU</a>
+          <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
+          <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák</a>
+          <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet</a>
+  
+          <h2>Hardver - Gépház</h2>
+          <a href="hardver/htmagn.html">Háttértárak</a>
+          <a href="hardver/alaplap.html">Alaplap</a>
+          <a href="hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a>
+          <a href="hardver/kabport.html">Adatkábelek és portok</a>
+          <a href="hardver/tapakku.html">Tápegység, akkumulátor</a>
+          <a href="hardver/haz.html">Ház</a>
+          <a href="hardver/pc.html">Személyi számítógép</a>
+          <a href="hardver/biosuefi.html">BIOS, UEFI</a>
+  
+          <h2>Hardver - Perifériák</h2>
+          <a href="perif/bill.html">Billentyűzet</a>
+          <a href="perif/eger.html">Egér, touchpad</a>
+          <a href="perif/printer.html">Nyomtató</a>
+          <a href="perif/monitor.html">Monitorok és projektorok</a>
+          <a href="perif/mic.html">Mikrofonok és hangszórók</a>
+          <a href="perif/fenyk.html">Fényképező & kamera</a>
+          <a href="perif/scanner.html">Scanner</a>
+          <a href="perif/digitabla.html">Digitális tábla</a>
+          <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák</a>
+          <a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők</a>
+  
+          <h2>Operációs rendszerek</h2>
+          <a href="rendszer/os.html">Operációs rendszerek</a>
+          <a href="rendszer/fajl.html">Fájlok, fájlrendszerek</a>
+          <a href="rendszer/segedpr.html">Segédprogramok</a>
+          <a href="rendszer/windows.html">Windows</a>
+          <a href="rendszer/linux.html">Linux</a>
+          <a href="rendszer/android.html">Android</a>
+          <a href="rendszer/unix.html">Unix</a>
+          <a href="rendszer/virt.html">Virtuális gépek és konténerek</a>
+  
+          <h2>Oktatási anyagok</h2>
+          <a href="okt/okt.html">Oktatási anyagok</a>
+          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+  
+          <h2>Irodai szoftverek</h2>
+          <a href="office/tablazat.html">Táblázatkezelés</a>
+          <a href="office/szoveg.html">Szövegszerkesztés</a>
+          <a href="office/prezi.html">Prezentációkészítés</a>
+          <a href="office/kiadvany.html">Kiadványszerkesztés</a>
+          <a href="office/texlatex.html">TeX / LaTeX</a>
+  
+          <h2>Mikroelektronika</h2>
+          <a href="mikro/bevelektr.html">Bevezetés az elektronikába</a>
+          <a href="mikro/raspberry.html">Raspberry</a>
+          <a href="mikro/arduino.html">Arduino</a>
+          <a href="mikro/robotika.html">Robotika</a>
+          <a href="mikro/dron.html">Drónok</a>
+  
+          <h2>3D nyomtatás</h2>
+          <a href="3dnyomt.html">3D nyomtatás</a>
+          <a href="3ddekor.html">Nemzeti lakásdekor</a>
+  
+          <h2>Okoseszközök</h2>
+          <a href="okos/okostelefon.html">Okostelefonok</a>
+  
+          <h2>Mesterséges intelligencia</h2>
+          <a href="mlnnai/mlnnai1.html">Mesterséges intelligencia</a>
+          <a href="mlnnai/mlnnai2.html">Gépi tanulás</a>
+          <a href="mlnnai/mlnnai3.html">Neuronhálózatok</a>
+        </article>
+      </section>
     </main>
-
-    <div style="clear:both;"></div>
   </body>
 </html>
