--- a/3dnyomt.html
+++ b/3dnyomt.html
@@ -59,6 +59,9 @@
         
         <h3>Projektek</h3>
         <p><a href="magasktarsas">Magaskultúrák társasjáték</a></p>
+
+        <h3>Rakamazi turul fali dísz</h3>
+        <h3>Rakamazi turul asztali dísz</h3>
     </main>
         
     <div style="clear:both;"></div>
