--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
         <a href="nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="nav/peldak.html">Példák</a>
-        <a href="nav/paly.html">Pályázatok</a>
+        <div class="dropdown">
+          <a href="#">Projektek</a>
+            <div class="dropdown-content">
+              <a href="mikro/bevelektr.html">Mikroelektronika</a>
+              <a href="3dnyomt.html">3D nyomtatás</a>
+              <a href="mikro/robotika.html">Robotika</a>
+              <a href="mikro/dron.html">Drónok</a>
+              <a href="mikro/mlnnai1.html">Mesterséges intelligencia</a>
+            </div>
+        </div>
         <a href="nav/vizsgak.html">Vizsgák</a>
       </nav>
     </div>
@@ -39,6 +48,7 @@
     <div id="cim">
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
       <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák.</p>
+      <p>A Projektek menüpont alatti gyakorlati programjainkhoz várjuk a diákok jelentkezését.</p>
     </div>
 
     <main>
@@ -106,23 +116,6 @@
         </article>
       </section>
 
-      <h1>Irodai szoftverek</h1>
-      <section>
-        <aside>
-          <h2>Irodai informatikus</h2>
-          <p><a href="#">Haladó szintű szövegszerkesztési ismeretek</a></p>
-          <p><a href="#">Haladó szintű táblázatkezelési ismeretek</a></p>
-          <p><a href="#">Irodai szoftverek integrált használata</a></p>
-        </aside>
-        <article>
-          <a href="office/tablazat.html">Táblázatkezelés</a>
-          <a href="office/szoveg.html">Szövegszerkesztés</a>
-          <a href="office/prezi.html">Prezentációkészítés</a>
-          <a href="office/kiadvany.html">Kiadványszerkesztés</a>
-          <a href="office/texlatex.html">TeX / LaTeX</a>
-        </article>
-      </section>
-      
       <h1>Operációs rendszerek</h1>
       <section>
         <aside>
@@ -147,36 +140,20 @@
         </article>
       </section>
 
-      <h1>Érdekességek</h1>
+      <h1>Irodai szoftverek</h1>
       <section>
         <aside>
+          <h2>Irodai informatikus</h2>
+          <p><a href="#">Haladó szintű szövegszerkesztési ismeretek</a></p>
+          <p><a href="#">Haladó szintű táblázatkezelési ismeretek</a></p>
+          <p><a href="#">Irodai szoftverek integrált használata</a></p>
         </aside>
         <article>
-          <h2>Mikroelektronika</h2>
-          <a href="mikro/bevelektr.html">Bevezetés az elektronikába</a>
-          <a href="mikro/raspberry.html">Raspberry</a>
-          <a href="mikro/arduino.html">Arduino</a>
-
-          <h2>3D nyomtatás</h2>
-          <a href="3dnyomt.html">3D nyomtatás</a>
-          <a href="3ddekor.html">Nemzeti lakásdekor</a>
-
-          <h2>Gépek</h2>
-          <a href="mikro/robotika.html">Robotika</a>
-          <a href="mikro/dron.html">Drónok</a>
-        </article>
-      </section>
-
-      <h1>Mesterséges intelligencia</h1>
-      <section>
-        <aside>
-          <h2>Informatikai és távközlési alapok</h2>
-          <p><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></p>
-        </aside>
-        <article>
-          <a href="mlnnai/mlnnai1.html">Mesterséges intelligencia</a>
-          <a href="mlnnai/mlnnai2.html">Gépi tanulás</a>
-          <a href="mlnnai/mlnnai3.html">Neuronhálózatok</a>
+          <a href="office/tablazat.html">Táblázatkezelés</a>
+          <a href="office/szoveg.html">Szövegszerkesztés</a>
+          <a href="office/prezi.html">Prezentációkészítés</a>
+          <a href="office/kiadvany.html">Kiadványszerkesztés</a>
+          <a href="office/texlatex.html">TeX / LaTeX</a>
         </article>
       </section>
     </main>
