--- a/mikro/mlnnai1.html
+++ b/mikro/mlnnai1.html
@@ -33,7 +33,16 @@
             <a href="../nav/rolunk.html">Rólunk</a>
             <a href="#">Blog</a>
             <a href="../nav/peldak.html">Példák</a>
-            <a href="../nav/paly.html">Pályázatok</a>
+            <div class="dropdown">
+              <a href="#">Projektek</a>
+                <div class="dropdown-content">
+                  <a href="bevelektr.html">Mikroelektronika</a>
+                  <a href="../3dnyomt.html">3D nyomtatás</a>
+                  <a href="robotika.html">Robotika</a>
+                  <a href="dron.html">Drónok</a>
+                  <a href="#">Mesterséges intelligencia</a>
+                </div>
+            </div>
             <a href="../nav/vizsgak.html">Vizsgák</a>
           </nav>
         </div>
