--- a/hardver/pc.html
+++ b/hardver/pc.html
@@ -32,7 +32,16 @@
       <a href="../nav/rolunk.html">Rólunk</a>
         <a href="#">Blog</a>
         <a href="../nav/peldak.html">Példák</a>
-        <a href="../nav/paly.html">Pályázatok</a>
+        <div class="dropdown">
+          <a href="#">Projektek</a>
+            <div class="dropdown-content">
+              <a href="../mikro/bevelektr.html">Mikroelektronika</a>
+              <a href="../3dnyomt.html">3D nyomtatás</a>
+              <a href="../mikro/robotika.html">Robotika</a>
+              <a href="../mikro/dron.html">Drónok</a>
+              <a href="../mikro/mlnnai1.html">Mesterséges intelligencia</a>
+            </div>
+        </div>
         <a href="../nav/vizsgak.html">Vizsgák</a>
       </nav>
     </div>
