--- a/nav/vizsgak.html
+++ b/nav/vizsgak.html
@@ -47,7 +47,7 @@
           </nav>
         </div>
             
-        <main>
+        <main id="vizsga">
           <h1>Vizsgák</h1>
 
           <h3>Informatikai és távközlési alapok interaktív teszt</h3>
