--- a/mikro/mlnnai1.html
+++ b/mikro/mlnnai1.html
@@ -77,10 +77,14 @@
 
           <h3>Neurális hálók elmélete</h3>
           <p>Neurális hálókkal megoldható feladatok. A neurális hálók típusai Tanítás tanítóval és tanító nélkül. A többrétegű perceptron (MLP) felépítése és tanítása. Aktivációs függvények és veszteségfüggvények. Error-back-propagation. Gradiens módszer, konjugált gradiens módszer, kvázi Newton-módszerek, a Levenberg-Marquardt-módszer. Az MLP tulajdonságai. Radiális bázis hálózatok (RBF). Büntető függvények. Regularizáció. Általánosított radiális bázis hálózatok. Magfüggvényes approximációk. Mély tanulási technikák. Autoencoder. Tartó vektor gépek (SVM). Az optimális hipersík. SVM szeparálásra és függvényközelítésre. A konvolúciós hálózat felépítése és használata. Az error-backpropagation konvolúciós hálózatra. Rekurrens hálózatok. Long short-term memory.</p>
+
+          <h1>NumPy</h1>
+          <h1>Pandas</h1>
+          <h1>Matplotlib</h1>
+          <h1>SciPy</h1>
+          <h1>Statisztika</h1>
+          <h1>ChatGPT</h1>
+          <h1>Tengr.ai</h1>
         </main>
-            
-        <div style="clear:both;"></div>
-            
-        <script src="../static/accordion.js"></script>
       </body>
     </html>
