--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
       <section>
         <aside>
           <h2>Irodai informatikus</h2>
-          <p><a href="#">Haladó szintű szövegszerkesztési ismeretek</a></p>
-          <p><a href="#">Haladó szintű táblázatkezelési ismeretek</a></p>
-          <p><a href="#">Irodai szoftverek integrált használata</a></p>
+          <p><a href="office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
+          <p><a href="office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
+          <p><a href="office/kttint.html">Irodai szoftverek integrált használata</a></p>
         </aside>
         <article>
           <a href="office/tablazat.html">Táblázatkezelés</a>
