--- a/index.html
+++ b/index.html
@@ -145,8 +145,11 @@
         <aside>
           <h2>Irodai informatikus</h2>
           <p><a href="office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
+          <p><a href="https://njszt.hu/hu/icdl/modul/szovegszerkesztes" target="_blank">ECDL Szövegszerkesztés modul</a></p>
           <p><a href="office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
+          <p><a href="https://njszt.hu/hu/icdl/modul/tablazatkezeles" target="_blank">ECDL Táblázatkezelés modul</a></p>
           <p><a href="office/kttint.html">Irodai szoftverek integrált használata</a></p>
+          <p><a href="https://njszt.hu/hu/icdl/modul/prezentacio" target="_blank">ECDL Prezentációkészítés modul</a></p>
         </aside>
         <article>
           <a href="office/tablazat.html">Táblázatkezelés</a>
