--- a/nav/vizsgak.html
+++ b/nav/vizsgak.html
@@ -136,7 +136,7 @@
             </article>
           </div>
 
-          <h3>Irodai szoftvere</h3>
+          <h3>Irodai szoftverek</h3>
           <div class="vizs">
             <aside>
 
