--- a/mikro/mlnnai1.html
+++ b/mikro/mlnnai1.html
@@ -78,6 +78,26 @@
           <h3>Neurális hálók elmélete</h3>
           <p>Neurális hálókkal megoldható feladatok. A neurális hálók típusai Tanítás tanítóval és tanító nélkül. A többrétegű perceptron (MLP) felépítése és tanítása. Aktivációs függvények és veszteségfüggvények. Error-back-propagation. Gradiens módszer, konjugált gradiens módszer, kvázi Newton-módszerek, a Levenberg-Marquardt-módszer. Az MLP tulajdonságai. Radiális bázis hálózatok (RBF). Büntető függvények. Regularizáció. Általánosított radiális bázis hálózatok. Magfüggvényes approximációk. Mély tanulási technikák. Autoencoder. Tartó vektor gépek (SVM). Az optimális hipersík. SVM szeparálásra és függvényközelítésre. A konvolúciós hálózat felépítése és használata. Az error-backpropagation konvolúciós hálózatra. Rekurrens hálózatok. Long short-term memory.</p>
 
+          <h1>SuliPY - Mesterséges intelligencia</h1>
+
+          <h3>Mesterséges intelligencia | Gépi tanulás | Mély tanulás | Hazai példák a leírásban</h3>
+          <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/T1EwEJw-LwY?si=BzkweB2j-rzXShPd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+          <h3>Egy gépi tanulás projekthez szükséges feltételek</h3>
+          <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/17sYvqW5yfs?si=cbCgAugoFDthCTlH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+          <h3>Google Colab adatelemzéshez, gépi tanuláshoz</h3>
+          <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/QAA-lF05i1o?si=Kyui1Wcz33JE33T0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+          <h3>Pandas könyvtár adatelemzéshez, gépi tanuláshoz</h3>
+          <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KQElK1HtLog?si=sAJJ7oZQ9Lu_2awG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+          <h3>Adatok előfeldolgozása gépi tanuláshoz | Data Preprocessing</h3>
+          <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_X2fUf4DEdk?si=pUF8vj5MRfs32e6c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+          <h3>Adatok előrejelzése gépi tanulással | Lineáris regresszió</h3>
+          <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/oKNIr-iCb6g?si=FxOM_QgfwmikK4HS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
           <h1>NumPy</h1>
           <h1>Pandas</h1>
           <h1>Matplotlib</h1>
