--- a/nav/vizsgak.html
+++ b/nav/vizsgak.html
@@ -48,6 +48,20 @@
         </div>
             
         <main id="vizsga">
+          <h1>ECDL</h1>
+
+          <h3>ECDL vizsgafeladatok</h3>
+          <div class="vizs">
+            <aside>
+
+            </aside>
+            <article>
+              <p><a href="https://njszt.hu/hu/icdl/modul/szovegszerkesztes" target="_blank">ECDL Szövegszerkesztés modul</a></p>
+              <p><a href="https://njszt.hu/hu/icdl/modul/tablazatkezeles" target="_blank">ECDL Táblázatkezelés modul</a></p>
+              <p><a href="https://njszt.hu/hu/icdl/modul/prezentacio" target="_blank">ECDL Prezentációkészítés modul</a></p>
+            </article>
+          </div>
+
           <h1>Ágazati alapvizsga</h1>
 
           <h3>Informatikai és távközlési alapok interaktív teszt (30 perc)</h3>
