--- a/nav/vizsgak.html
+++ b/nav/vizsgak.html
@@ -96,6 +96,36 @@
             </article>
           </div>
 
+          <h1>Érettségi vizsga</h1>
+
+          <h3>Szövegszerkesztés</h3>
+          <div class="vizs">
+            <aside>
+
+            </aside>
+            <article>
+              <p><a href="#">Feladat</a></p>
+            </article>
+          </div>
+          <h3>Táblázatkezelés</h3>
+          <div class="vizs">
+            <aside>
+
+            </aside>
+            <article>
+              <p><a href="#">Feladat</a></p>
+            </article>
+          </div>
+          <h3>Prezentációkészítés</h3>
+          <div class="vizs">
+            <aside>
+
+            </aside>
+            <article>
+              <p><a href="#">Feladat</a></p>
+            </article>
+          </div>
+
           <h1>Szakmai vizsga</h1>
 
           <h3>Informatikai rendszer- és alkalmazásüzemeltető technikus szakmai ismeret (központi interaktív vizsga)</h3>
